--- a/info.html
+++ b/info.html
@@ -7,15 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>SOLSYSTEMET</h1>
-        <h2>SOLARIS</h2>
-    </header>
-
-    <main>
-        <ul id="planetlist"></ul>
-    </main>
-
+    
+    <div id="planetinfo"></div>
 
     <script src="index.js"></script>
 </body>
