--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <ul id="planetlist"></ul>
     </main>
 
+    <div id="planetinfo"></div>
+
 
     <script src="index.js"></script>
 </body>
